Fix wrong height on mobile menu

--- a/app/public/static/css/login.css
+++ b/app/public/static/css/login.css
@@ -1,6 +1,7 @@
 /* Main panel */
-.loginPanel.loginPanel {
-    height: 145px;
+.loginPanel.loginPanel, #loginControllerWrapper {
+    height: 75px;
+    min-height: 75px;
 }
 
 #loginController {
@@ -67,7 +68,7 @@
             transition: height .3s;
 }
 
-#logged .col-xs-3 {
+#logged .col-xs-4 {
     font-family: 'Lato';
     font-size: 170%;
     font-weight: 300;
@@ -76,24 +77,23 @@
     text-align: center;
 }
 
-@media (min-width: 768px) {
-    .loginPanel.loginPanel, #loginControllerWrapper {
-        height: 75px;
-        min-height: 75px;
-    }
+#logged .underlined {
+    text-decoration: underline;
+}
 
+@media (min-width: 768px) {
     .form-inline input {
         margin-bottom: 0;
     }
 }
 
 @media (max-width: 500px) {
-    #logged .col-xs-3 span {
+    #logged .col-xs-4 span {
         display: none;
     }
 }
 
 @media (max-width: 610px) {
-    #logged .col-xs-3 {
+    #logged .col-xs-4 {
         font-size: 110%;
 }
